implementing the ride strategy manager and testing the flow of ride request